--- a/index.html
+++ b/index.html
@@ -1,33 +1,295 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-      <div class="container" style="background: red">
-          <div class="row">
-            <div class="col-sm">
-              One of three columns
-            </div>
-            <div class="col-sm">
-              One of three columns
-            </div>
-            <div class="col-sm">
-              One of three columns
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="./index.css">
+  <title>Hello, world!</title>
+</head>
+
+<body data-spy="scroll" data-target="#navbar" data-offset="57">
+  <!-- Header -->
+  <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="assets/images/platzi-logo.png" alt="Platzi logo"> Conf Hawai
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#main">La conferencia <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#speakers">Los oradores</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#place-time">Lugar y fecha</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#form-orador">Conviértete en orador</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-platzi" href="#" data-toggle="modal" data-target="#modalCompra">Comprar tickets</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- Header -->
+  <!-- Main -->
+  <main id="main">
+    <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/images/hawaii.jpg" class="d-block w-100" alt="Hawaii1">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/images/hawaii2.jpg" class="d-block w-100" alt="Hawaii2">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/images/hawaii3.jpeg" class="d-block w-100" alt="Hawaii3">
+        </div>
+        <div class="overlay">
+          <div class="container">
+            <div class="row align-items-center">
+              <div class="col-md-6 offset-md-6 text-center text-md-right">
+                <h1> Platzi Conf Hawaii </h1>
+                <p class="d-none d-md-block">
+                  Platzi Conf llega por primera vez a Hawaii!
+                  Un evento para compartir con nuestra comunidad el
+                  conocimiento y experiencia de los expertos que están creando el futuro del Internet.
+                  Ven a conocer a miembros del Team Platzi, a otros estudiantes de Platzi y a los oradores de primer
+                  nivel que tenemos para ti.
+                  Te esperamos!
+                </p>
+                <a class="btn btn-outline-light" href="#">Quiero ser orador</a>
+                <button data-target="#modalCompra" data-toggle="modal" class="btn btn-platzi" type="button">Comprar tickets</button>
+              </div>
             </div>
           </div>
         </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+      </div>
+    </div>
+  </main>
+  <!-- Main -->
+  <!-- Speakers -->
+  <section id="speakers" class="mt-4">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center text-uppercase">
+          <small>Conoce a los </small>
+          <h2>Oradores</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <img src="assets/speakers/sacha.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <div class="badges">
+                <span class="badge badge-warning">Javascript</span>
+                <span class="badge badge-info">React</span>
+              </div>
+              <h5 class="card-title">Sacha</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <img src="assets/speakers/cvander.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <div class="badges">
+                <span class="badge badge-dark">Cvander News</span>
+              </div>
+              <h5 class="card-title mb-0">Christian</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <img src="assets/speakers/freddy.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <div class="badges">
+                <span class="badge badge-secondary">How to create</span>
+                <span class="badge badge-primary">Arduino</span>
+              </div>
+              <h5 class="card-title mb-0">Freddy</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <img src="assets/speakers/leonidas.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <div class="badges">
+                <span class="badge badge-light">Webpack</span>
+              </div>
+              <h5 class="card-title mb-0">Leónidas</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Speakers -->
+  <!-- Lugar y fecha -->
+  <section id="place-time">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 col-lg-6  pl-0 pr-0">
+          <img src="assets/images/honolulu.jpg" alt="Honolulu">
+        </div>
+        <div class="col-12 col-lg-6 pt-4 pb-4">
+          <h2 class="mt-2">Honolulu - Octubre 2025</h2>
+          <p>
+            Honolulu u Honolulú2 es la capital y localidad más grande del estado de Hawái, en los Estados Unidos.
+            Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se
+            refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han
+            formado una ciudad-condado consolidada que cubre toda la isla (aproximadamente 600 km² de superficie).
+          </p>
+          <a class="btn btn-outline-light" href="https://es.wikipedia.org/wiki/Honolulu">Conoce más</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Lugar y fecha -->
+  <!-- Form -->
+  <section id="form-orador" class="pt-2 pb-2">
+    <div class="container">
+      <div class="row">
+        <div class="col text-center">
+          <small class="text-uppercase">Conviértete en un</small>
+          <h2>Orador</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col text-center">
+          Anótate como orador para una charla <abbr data-toggle="tooltip" title='Charlas de 5 minutos'>ignite</abbr>.
+          Cuéntanos de qué quieres hablar
+        </div>
+      </div>
+      <div class="row">
+        <div class="col col-md-10 offset-md-1 col-lg-8 offset-lg-2 pt-4">
+          <form>
+            <div class="form-row">
+              <div class="form-group col-12 col-md-6">
+                <input type="text" class="form-control" placeholder="Nombre">
+              </div>
+              <div class="form-group col-12 col-md-6">
+                <input type="text" class="form-control" placeholder="Apellidos">
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col">
+                <textarea name="text" class="form-control form-control-lg" placeholder="Sobre qué quieres hablar" cols="30" rows="10"></textarea>
+                <small class="form-text text-muted">
+                  Recuerda incluir un título para tu charla.
+                </small>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col">
+                <button type="button" class="btn btn-platzi btn-block">Enviar</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Form -->
+  <!-- Footer -->
+
+  <footer id="footer" class="pb-4 pt-4">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-12 col-lg">
+          <a href="#">Preguntas Fcuentes</a>
+        </div>
+        <div class="col-12 col-lg">
+          <a href="#">Contáctanos</a>
+        </div>
+        <div class="col-12 col-lg">
+          <a href="#">Prensa</a>
+        </div>
+        <div class="col-12 col-lg">
+          <a href="#">Términos y ndiciones</a>
+        </div>
+        <div class="col-12 col-lg">
+          <a href="#">Privacidad</a>
+        </div>
+        <div class="col-12 col-lg">
+          <a href="#">Estudiantes</a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Modal -->
+  <div class="modal fade" id="modalCompra" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Comprar Tickets</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form action="">
+              <div class="form-row">
+                <div class="form-group col">
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text" id="basic-addon1">@</span>
+                        </div>
+                        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                      </div>
+                </div>
+              </div>
+            </form>
+            <div class="alert alert-warning" role="alert">
+              Recibirás un correo de confirmación si eres seleccionado
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+            <button type="button" class="btn btn-platzi">Comprar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- Modal -->
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+    <script src="index.js"></script>
+</body>
+
 </html>
