--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a class="navbar-brand" href="#">
         <img src="assets/images/platzi-logo.png" alt="Platzi logo"> Conf Hawai
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
